src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;
 
@layer base {

  :root {
    
    --background: 0 0% 97%;
    --foreground: 222.2 84% 4.9%;
 
    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 36.9%;
 
    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;
 
    --card: 0 0% 100%;
    --card-alt: 0 0% 95%;
    --card-foreground: 222.2 84% 4.9%;
 
    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
 
    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;
 
    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;
 
    --accent: 199 94% 94%;
    --accent-foreground: 199 98% 28%;
 
    --destructive: 0 72.2% 50.6%;
    --destructive-foreground: 210 40% 98%;
 
    --ring: 222.2 84% 4.9%;
 
    --radius: 0.5rem;
  }
 
  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;
 
    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;
 
    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;
 
    --card: 215 28% 17%;
    --card-alt:  215 28% 10%;
    --card-foreground: 210 40% 98%;
 
    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
 
    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 11.2%;
 
    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;
 
    --accent: 180 100% 15%;
    --accent-foreground: 180 100% 78%;
 
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;
 
    --ring: hsl(212.7,26.8%,83.9);
  }

  @media print {
    :root {
      --background: 0 0% 100%;
      --foreground: 222.2 84% 4.9%;
   
      --muted: 210 40% 96.1%;
      --muted-foreground: 215.4 16.3% 36.9%;
   
      --popover: 0 0% 100%;
      --popover-foreground: 222.2 84% 4.9%;
   
      --card: 0 0% 100%;
      --card-alt: 0 0% 95%;
      --card-foreground: 222.2 84% 4.9%;
   
      --border: 214.3 31.8% 91.4%;
      --input: 214.3 31.8% 91.4%;
   
      --primary: 222.2 47.4% 11.2%;
      --primary-foreground: 210 40% 98%;
   
      --secondary: 210 40% 96.1%;
      --secondary-foreground: 222.2 47.4% 11.2%;
   
      --accent: 199 94% 94%;
      --accent-foreground: 199 98% 28%;
   
      --destructive: 0 72.2% 50.6%;
      --destructive-foreground: 210 40% 98%;
   
      --ring: 222.2 84% 4.9%;
   
      --radius: 0.5rem;
    }
  }
}
 
@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
    body{
      -webkit-print-color-adjust:exact !important;
      print-color-adjust:exact !important;
    }
  }
}

.progress-ring__circle {
    transition: stroke-dashoffset 0.35s;
    transform: rotate(-90deg);
    transform-origin: 50% 50%;
  }
  
  @media print {
    body {
      -webkit-print-color-adjust:exact !important;
      print-color-adjust:exact !important;
      zoom: 72%;
    }
    @page {
      margin: 2mm 2mm 2mm 2mm; 
    }
  }

